k8s/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airelgraph
  labels:
    app: airelgraph
