k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    app: airelgraph
    component: backend
spec:
  ingressClassName: traefik
  rules:
    - host: api-arg.kaelem.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
